--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+  "repository":{
+      "type": "git",
+      "url": "https://github.com/nicballesteros/node-website-webserver.git"
+  }
   },
   "author": "Nic Ballesteros",
   "license": "ISC"
